--- a/TheyDo.ipynb
+++ b/TheyDo.ipynb
@@ -90,17 +90,26 @@
    "execution_count": 1,
    "id": "9af06134-8d70-4c5e-8789-4154bfa99d57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chris/work/theydo_ml_challenge/theydo/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"tst-summarization\")\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(\"tst-summarization\")\n"
+    "tokenizer = AutoTokenizer.from_pretrained(\"finetuned_summarisation\")\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"finetuned_summarisation\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "98514773-5e59-40bb-b3d5-cb3795e54cb3",
    "metadata": {},
    "outputs": [],
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "8842f9aa-4424-452a-9575-0250dce3aafd",
    "metadata": {},
    "outputs": [],
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "7071ec13-fe69-4d25-8052-c735ff643cac",
    "metadata": {},
    "outputs": [
@@ -143,6 +152,14 @@
      "output_type": "stream",
      "text": [
       "World Bank will support Ukraine by conducting a rapid assessment of damage and needs. Ukrainians\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chris/work/theydo_ml_challenge/theydo/lib/python3.11/site-packages/transformers/generation/utils.py:1346: UserWarning: Using `max_length`'s default (20) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -154,27 +171,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "38950f1e-2824-4210-9131-e11de4adbfd8",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "8acdcf57-3fc9-4645-a596-5aa661517314",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "task_prefix = \"translate English to German: \"\n",
-    "\n",
-    "sentences = [\"The house is wonderful.\", \"I like to work in NYC.\"]"
+    "# TODO load saved models and test them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
+   "id": "8acdcf57-3fc9-4645-a596-5aa661517314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"finetuned_de-en_translation\")\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"finetuned_de-en_translation\")\n",
+    "\n",
+    "\n",
+    "# task_prefix = \"translate German to English: \"\n",
+    "task_prefix = \"\"\n",
+    "\n",
+    "sentences = [\"Das Haus ist wunderbar.\", \"Ich arbeite gerne in NYC.\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "4d0b430e-dbc2-4754-9acf-2522c6f79651",
    "metadata": {},
    "outputs": [
@@ -182,8 +208,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Das Haus ist wunderbar.\n",
-      "Ich arbeite gerne in NYC.\n"
+      "The house is wonderful.\n",
+      "I like working in NYC.\n"
      ]
     }
    ],
@@ -217,67 +243,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2119d0e3-2b15-4b5c-820d-b44780a37181",
+   "metadata": {},
+   "source": [
+    "There's a bug in the sentiment extraction model:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "4d484f4e-08d0-43c0-b3d4-a8e4b490a365",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"test-sent-bert\")\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\"test-sent-bert\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"finetuned-imdb-bert\")\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"finetuned-imdb-bert\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "d870bc33-226d-4523-8ec1-76c0851581ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Pirates of the Caribean was a horrible movie.\"\n",
-    "inputs = tokenizer(text, return_tensors=\"pt\")"
+    "text = \"Pirates of the Caribean was a horrible movie.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "6fe2953b-be37-4a61-a285-e952b557a40a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted 0 tensor([[0.9987, 0.0013]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6v/nj127lc1663btr53s35_n_fh0000gn/T/ipykernel_71500/4045664043.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  probs = torch.nn.functional.softmax(logits)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
-    "with torch.no_grad():\n",
+    "def sent_pred(text):\n",
     "\n",
-    "    logits = model(**inputs).logits"
+    "    inputs = tokenizer(text, return_tensors=\"pt\")\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "    \n",
+    "        logits = model(**inputs).logits\n",
+    "    \n",
+    "    predicted_class_id = logits.argmax().item()\n",
+    "    predicted_label = model.config.id2label[predicted_class_id]\n",
+    "    probs = torch.nn.functional.softmax(logits)\n",
+    "    print(f\"Predicted {predicted_label} {probs}\")\n",
+    "\n",
+    "sent_pred(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "3ec9f73d-7f51-44f9-ba49-3fd9fb6c0934",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: 0, 1: 1}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted 0 tensor([[0.9903, 0.0097]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6v/nj127lc1663btr53s35_n_fh0000gn/T/ipykernel_71500/4045664043.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  probs = torch.nn.functional.softmax(logits)\n"
+     ]
     }
    ],
    "source": [
-    "model.config.id2label"
+    "sent_pred(\"Inception was the worst\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "ef58545d-0bf6-4110-a585-857c283ee17f",
    "metadata": {},
    "outputs": [
@@ -287,15 +352,12 @@
        "0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "predicted_class_id = logits.argmax().item()\n",
-    "model.config.id2label[predicted_class_id]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
