--- a/TheyDo.ipynb
+++ b/TheyDo.ipynb
@@ -247,7 +247,7 @@
    "id": "2119d0e3-2b15-4b5c-820d-b44780a37181",
    "metadata": {},
    "source": [
-    "There's a bug in the sentiment extraction model:"
+    "## There's a bug in the sentiment extraction model:"
    ]
   },
   {
@@ -360,12 +360,180 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "07a241c7-964d-4aea-ad8b-93d76b657ae9",
+   "metadata": {},
+   "source": [
+    "## Compare OpenAI and finetuned models:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0b9ae44-651d-425e-9d17-311b8a372d3d",
+   "execution_count": 30,
+   "id": "400f28cd-475c-4ab8-a09b-a9402ef8b97c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "cnn_test = pd.read_csv(\"data/cnn_dailymail/test.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "38084a94-4bc9-42c6-9b37-6aab7533d71b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>article</th>\n",
+       "      <th>highlights</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>92c514c913c0bdfe25341af9fd72b29db544099b</td>\n",
+       "      <td>Ever noticed how plane seats appear to be gett...</td>\n",
+       "      <td>Experts question if  packed out planes are put...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2003841c7dc0e7c5b1a248f9cd536d727f27a45a</td>\n",
+       "      <td>A drunk teenage boy had to be rescued by secur...</td>\n",
+       "      <td>Drunk teenage boy climbed into lion enclosure ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>91b7d2311527f5c2b63a65ca98d21d9c92485149</td>\n",
+       "      <td>Dougie Freedman is on the verge of agreeing a ...</td>\n",
+       "      <td>Nottingham Forest are close to extending Dougi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>caabf9cbdf96eb1410295a673e953d304391bfbb</td>\n",
+       "      <td>Liverpool target Neto is also wanted by PSG an...</td>\n",
+       "      <td>Fiorentina goalkeeper Neto has been linked wit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3da746a7d9afcaa659088c8366ef6347fe6b53ea</td>\n",
+       "      <td>Bruce Jenner will break his silence in a two-h...</td>\n",
+       "      <td>Tell-all interview with the reality TV star, 6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11485</th>\n",
+       "      <td>ed8674cc15b29a87d8df8de1efee353d71122272</td>\n",
+       "      <td>Our young Earth may have collided with a body ...</td>\n",
+       "      <td>Oxford scientists say a Mercury-like body stru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11486</th>\n",
+       "      <td>2f58d1a99e9c47914e4b1c31613e3a041cd9011e</td>\n",
+       "      <td>A man facing trial for helping his former love...</td>\n",
+       "      <td>Man accused of helping former lover kill woman...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11487</th>\n",
+       "      <td>411f6d57825161c3a037b4742baccd6cd227c0c3</td>\n",
+       "      <td>A dozen or more metal implements are arranged ...</td>\n",
+       "      <td>Marianne Power tried the tuning fork facial at...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488</th>\n",
+       "      <td>b5683ef8342056b17b068e0d59bdbe87e3fe44ea</td>\n",
+       "      <td>Brook Lopez dominated twin brother Robin with ...</td>\n",
+       "      <td>Brooklyn Nets beat the Portland Trail Blazers ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11489</th>\n",
+       "      <td>a6a5491edb0c96c4391b6a8c4504416b3572b3a1</td>\n",
+       "      <td>A Chinese hospital is being painstakingly move...</td>\n",
+       "      <td>Chinese hospital marked for demolition because...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11490 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             id  \\\n",
+       "0      92c514c913c0bdfe25341af9fd72b29db544099b   \n",
+       "1      2003841c7dc0e7c5b1a248f9cd536d727f27a45a   \n",
+       "2      91b7d2311527f5c2b63a65ca98d21d9c92485149   \n",
+       "3      caabf9cbdf96eb1410295a673e953d304391bfbb   \n",
+       "4      3da746a7d9afcaa659088c8366ef6347fe6b53ea   \n",
+       "...                                         ...   \n",
+       "11485  ed8674cc15b29a87d8df8de1efee353d71122272   \n",
+       "11486  2f58d1a99e9c47914e4b1c31613e3a041cd9011e   \n",
+       "11487  411f6d57825161c3a037b4742baccd6cd227c0c3   \n",
+       "11488  b5683ef8342056b17b068e0d59bdbe87e3fe44ea   \n",
+       "11489  a6a5491edb0c96c4391b6a8c4504416b3572b3a1   \n",
+       "\n",
+       "                                                 article  \\\n",
+       "0      Ever noticed how plane seats appear to be gett...   \n",
+       "1      A drunk teenage boy had to be rescued by secur...   \n",
+       "2      Dougie Freedman is on the verge of agreeing a ...   \n",
+       "3      Liverpool target Neto is also wanted by PSG an...   \n",
+       "4      Bruce Jenner will break his silence in a two-h...   \n",
+       "...                                                  ...   \n",
+       "11485  Our young Earth may have collided with a body ...   \n",
+       "11486  A man facing trial for helping his former love...   \n",
+       "11487  A dozen or more metal implements are arranged ...   \n",
+       "11488  Brook Lopez dominated twin brother Robin with ...   \n",
+       "11489  A Chinese hospital is being painstakingly move...   \n",
+       "\n",
+       "                                              highlights  \n",
+       "0      Experts question if  packed out planes are put...  \n",
+       "1      Drunk teenage boy climbed into lion enclosure ...  \n",
+       "2      Nottingham Forest are close to extending Dougi...  \n",
+       "3      Fiorentina goalkeeper Neto has been linked wit...  \n",
+       "4      Tell-all interview with the reality TV star, 6...  \n",
+       "...                                                  ...  \n",
+       "11485  Oxford scientists say a Mercury-like body stru...  \n",
+       "11486  Man accused of helping former lover kill woman...  \n",
+       "11487  Marianne Power tried the tuning fork facial at...  \n",
+       "11488  Brooklyn Nets beat the Portland Trail Blazers ...  \n",
+       "11489  Chinese hospital marked for demolition because...  \n",
+       "\n",
+       "[11490 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn_test"
+   ]
   }
  ],
  "metadata": {
